src/main/java/com/mangooo/compiler/Project_ASTParser.java
package com.mangooo.compiler;// $ANTLR 3.4 N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g 2025-05-13 01:24:50

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class Project_ASTParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARRAY_INIT", "BLOCK", "BREAK", "CASE_STMT", "CHAR_LITERAL", "COMMENT", "CONTINUE", "DIV", "FLOAT_LITERAL", "FOR_INIT", "FUNC_DEF", "GLOBAL_DECLS", "ID", "INCLUDES", "INIT_LIST", "INT_LITERAL", "LINE_COMMENT", "MOD", "MULT", "PARAMS", "PROGRAM", "STRING_LITERAL", "STRUCT_DEF", "STRUCT_MEMBERS", "StringCharacter", "VAR_DECL", "WS", "'!'", "'!='", "'#include'", "'%='", "'&&'", "'&'", "'('", "')'", "'*='", "'+'", "'++'", "'+='", "','", "'-'", "'--'", "'-='", "'->'", "'.'", "'.h'", "'/='", "':'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'case'", "'char'", "'ctype.h'", "'default'", "'do'", "'double'", "'else'", "'float'", "'for'", "'if'", "'int'", "'long'", "'printf'", "'return'", "'short'", "'signed'", "'stdio.h'", "'stdlib.h'", "'string.h'", "'struct'", "'switch'", "'time.h'", "'unsigned'", "'void'", "'while'", "'{'", "'||'", "'}'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int T__87=87;
    public static final int T__88=88;
    public static final int T__89=89;
    public static final int ARRAY_INIT=4;
    public static final int BLOCK=5;
    public static final int BREAK=6;
    public static final int CASE_STMT=7;
    public static final int CHAR_LITERAL=8;
    public static final int COMMENT=9;
    public static final int CONTINUE=10;
    public static final int DIV=11;
    public static final int FLOAT_LITERAL=12;
    public static final int FOR_INIT=13;
    public static final int FUNC_DEF=14;
    public static final int GLOBAL_DECLS=15;
    public static final int ID=16;
    public static final int INCLUDES=17;
    public static final int INIT_LIST=18;
    public static final int INT_LITERAL=19;
    public static final int LINE_COMMENT=20;
    public static final int MOD=21;
    public static final int MULT=22;
    public static final int PARAMS=23;
    public static final int PROGRAM=24;
    public static final int STRING_LITERAL=25;
    public static final int STRUCT_DEF=26;
    public static final int STRUCT_MEMBERS=27;
    public static final int StringCharacter=28;
    public static final int VAR_DECL=29;
    public static final int WS=30;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public Project_ASTParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public Project_ASTParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return Project_ASTParser.tokenNames; }
    public String getGrammarFileName() { return "N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g"; }


    String s="";


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:28:1: program : includeDirectives globalDeclarations -> ^( PROGRAM includeDirectives globalDeclarations ) ;
    public final program_return program() throws RecognitionException {
        program_return retval = new program_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        includeDirectives_return includeDirectives1 =null;

        globalDeclarations_return globalDeclarations2 =null;


        RewriteRuleSubtreeStream stream_globalDeclarations=new RewriteRuleSubtreeStream(adaptor,"rule globalDeclarations");
        RewriteRuleSubtreeStream stream_includeDirectives=new RewriteRuleSubtreeStream(adaptor,"rule includeDirectives");
        try {
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:29:5: ( includeDirectives globalDeclarations -> ^( PROGRAM includeDirectives globalDeclarations ) )
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:29:7: includeDirectives globalDeclarations
            {
            pushFollow(FOLLOW_includeDirectives_in_program143);
            includeDirectives1=includeDirectives();

            state._fsp--;

            stream_includeDirectives.add(includeDirectives1.getTree());

            pushFollow(FOLLOW_globalDeclarations_in_program145);
            globalDeclarations2=globalDeclarations();

            state._fsp--;

            stream_globalDeclarations.add(globalDeclarations2.getTree());

            // AST REWRITE
            // elements: globalDeclarations, includeDirectives
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 29:44: -> ^( PROGRAM includeDirectives globalDeclarations )
            {
                // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:29:47: ^( PROGRAM includeDirectives globalDeclarations )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                adaptor.addChild(root_1, stream_includeDirectives.nextTree());

                adaptor.addChild(root_1, stream_globalDeclarations.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (MismatchedTokenException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (NoViableAltException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }
        catch (RecognitionException e) {
             s = s +getErrorMessage(e,new String[]{e.input.toString()})+": "+getErrorHeader(e) +"\n";
        }

        finally {
        	// do for sure before leaving
             s = s + "Exit..."+"\n"; 
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class includeDirectives_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "includeDirectives"
    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:37:1: includeDirectives : ( includeDirective )+ -> ^( INCLUDES ( includeDirective )+ ) ;
    public final includeDirectives_return includeDirectives() throws RecognitionException {
        includeDirectives_return retval = new includeDirectives_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        includeDirective_return includeDirective3 =null;


        RewriteRuleSubtreeStream stream_includeDirective=new RewriteRuleSubtreeStream(adaptor,"rule includeDirective");
        try {
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:38:5: ( ( includeDirective )+ -> ^( INCLUDES ( includeDirective )+ ) )
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:38:7: ( includeDirective )+
            {
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:38:7: ( includeDirective )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==33) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:38:7: includeDirective
            	    {
            	    pushFollow(FOLLOW_includeDirective_in_includeDirectives205);
            	    includeDirective3=includeDirective();

            	    state._fsp--;

            	    stream_includeDirective.add(includeDirective3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            // AST REWRITE
            // elements: includeDirective
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 38:25: -> ^( INCLUDES ( includeDirective )+ )
            {
                // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:38:28: ^( INCLUDES ( includeDirective )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(INCLUDES, "INCLUDES")
                , root_1);

                if ( !(stream_includeDirective.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_includeDirective.hasNext() ) {
                    adaptor.addChild(root_1, stream_includeDirective.nextTree());

                }
                stream_includeDirective.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "includeDirectives"


    public static class includeDirective_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "includeDirective"
    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:41:1: includeDirective : '#include' '<' libraryName '>' -> ^( '#include' libraryName ) ;
    public final includeDirective_return includeDirective() throws RecognitionException {
        includeDirective_return retval = new includeDirective_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal4=null;
        Token char_literal5=null;
        Token char_literal7=null;
        libraryName_return libraryName6 =null;


        Object string_literal4_tree=null;
        Object char_literal5_tree=null;
        Object char_literal7_tree=null;
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_57=new RewriteRuleTokenStream(adaptor,"token 57");
        RewriteRuleTokenStream stream_53=new RewriteRuleTokenStream(adaptor,"token 53");
        RewriteRuleSubtreeStream stream_libraryName=new RewriteRuleSubtreeStream(adaptor,"rule libraryName");
        try {
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:42:5: ( '#include' '<' libraryName '>' -> ^( '#include' libraryName ) )
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:42:7: '#include' '<' libraryName '>'
            {
            string_literal4=(Token)match(input,33,FOLLOW_33_in_includeDirective232);  
            stream_33.add(string_literal4);


            char_literal5=(Token)match(input,53,FOLLOW_53_in_includeDirective234);  
            stream_53.add(char_literal5);


            pushFollow(FOLLOW_libraryName_in_includeDirective236);
            libraryName6=libraryName();

            state._fsp--;

            stream_libraryName.add(libraryName6.getTree());

            char_literal7=(Token)match(input,57,FOLLOW_57_in_includeDirective238);  
            stream_57.add(char_literal7);


            // AST REWRITE
            // elements: 33, libraryName
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 42:38: -> ^( '#include' libraryName )
            {
                // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:42:41: ^( '#include' libraryName )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_33.nextNode()
                , root_1);

                adaptor.addChild(root_1, stream_libraryName.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "includeDirective"


    public static class libraryName_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "libraryName"
    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:45:1: libraryName : ( 'stdio.h' | 'string.h' | 'ctype.h' | 'stdlib.h' | 'time.h' | ID '.h' );
    public final libraryName_return libraryName() throws RecognitionException {
        libraryName_return retval = new libraryName_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal8=null;
        Token string_literal9=null;
        Token string_literal10=null;
        Token string_literal11=null;
        Token string_literal12=null;
        Token ID13=null;
        Token string_literal14=null;

        Object string_literal8_tree=null;
        Object string_literal9_tree=null;
        Object string_literal10_tree=null;
        Object string_literal11_tree=null;
        Object string_literal12_tree=null;
        Object ID13_tree=null;
        Object string_literal14_tree=null;

        try {
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:46:5: ( 'stdio.h' | 'string.h' | 'ctype.h' | 'stdlib.h' | 'time.h' | ID '.h' )
            int alt2=6;
            switch ( input.LA(1) ) {
            case 77:
                {
                alt2=1;
                }
                break;
            case 79:
                {
                alt2=2;
                }
                break;
            case 63:
                {
                alt2=3;
                }
                break;
            case 78:
                {
                alt2=4;
                }
                break;
            case 82:
                {
                alt2=5;
                }
                break;
            case ID:
                {
                alt2=6;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:46:7: 'stdio.h'
                    {
                    root_0 = (Object)adaptor.nil();


                    string_literal8=(Token)match(input,77,FOLLOW_77_in_libraryName263); 
                    string_literal8_tree = 
                    (Object)adaptor.create(string_literal8)
                    ;
                    adaptor.addChild(root_0, string_literal8_tree);


                    }
                    break;
                case 2 :
                    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:47:7: 'string.h'
                    {
                    root_0 = (Object)adaptor.nil();


                    string_literal9=(Token)match(input,79,FOLLOW_79_in_libraryName271); 
                    string_literal9_tree = 
                    (Object)adaptor.create(string_literal9)
                    ;
                    adaptor.addChild(root_0, string_literal9_tree);


                    }
                    break;
                case 3 :
                    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:48:7: 'ctype.h'
                    {
                    root_0 = (Object)adaptor.nil();


                    string_literal10=(Token)match(input,63,FOLLOW_63_in_libraryName279); 
                    string_literal10_tree = 
                    (Object)adaptor.create(string_literal10)
                    ;
                    adaptor.addChild(root_0, string_literal10_tree);


                    }
                    break;
                case 4 :
                    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:49:7: 'stdlib.h'
                    {
                    root_0 = (Object)adaptor.nil();


                    string_literal11=(Token)match(input,78,FOLLOW_78_in_libraryName287); 
                    string_literal11_tree = 
                    (Object)adaptor.create(string_literal11)
                    ;
                    adaptor.addChild(root_0, string_literal11_tree);


                    }
                    break;
                case 5 :
                    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:50:7: 'time.h'
                    {
                    root_0 = (Object)adaptor.nil();


                    string_literal12=(Token)match(input,82,FOLLOW_82_in_libraryName295); 
                    string_literal12_tree = 
                    (Object)adaptor.create(string_literal12)
                    ;
                    adaptor.addChild(root_0, string_literal12_tree);


                    }
                    break;
                case 6 :
                    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:51:7: ID '.h'
                    {
                    root_0 = (Object)adaptor.nil();


                    ID13=(Token)match(input,ID,FOLLOW_ID_in_libraryName303); 
                    ID13_tree = 
                    (Object)adaptor.create(ID13)
                    ;
                    adaptor.addChild(root_0, ID13_tree);


                    string_literal14=(Token)match(input,49,FOLLOW_49_in_libraryName305); 
                    string_literal14_tree = 
                    (Object)adaptor.create(string_literal14)
                    ;
                    adaptor.addChild(root_0, string_literal14_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "libraryName"


    public static class globalDeclarations_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "globalDeclarations"
    // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:54:1: globalDeclarations : ( structDefinition | globalVariableDeclaration | functionDefinition )* -> ^( GLOBAL_DECLS ( structDefinition )* ( globalVariableDeclaration )* ( functionDefinition )* ) ;
    public final globalDeclarations_return globalDeclarations() throws RecognitionException {
        globalDeclarations_return retval = new globalDeclarations_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        structDefinition_return structDefinition15 =null;

        globalVariableDeclaration_return globalVariableDeclaration16 =null;

        functionDefinition_return functionDefinition17 =null;


        RewriteRuleSubtreeStream stream_globalVariableDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule globalVariableDeclaration");
        RewriteRuleSubtreeStream stream_functionDefinition=new RewriteRuleSubtreeStream(adaptor,"rule functionDefinition");
        RewriteRuleSubtreeStream stream_structDefinition=new RewriteRuleSubtreeStream(adaptor,"rule structDefinition");
        try {
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:55:5: ( ( structDefinition | globalVariableDeclaration | functionDefinition )* -> ^( GLOBAL_DECLS ( structDefinition )* ( globalVariableDeclaration )* ( functionDefinition )* ) )
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:55:7: ( structDefinition | globalVariableDeclaration | functionDefinition )*
            {
            // N:\\Study\\Material\\CS407\\Practical\\Projects\\Project 1\\New\\Project_AST.g:55:7: ( structDefinition | globalVariableDeclaration | functionDefinition )*
            loop3:
            do {
                int alt3=4;
                switch ( input.LA(1) ) {
                case 80:
                    {
                    int LA3_2 = input.LA(2);

                    if ( (LA3_2==ID) ) {
                        switch ( input.LA(3) ) {
                        case 86:
                            {
                            alt3=1;
                            }
                            break;
                        case ID:
                            {
                            int LA3_13 = input.LA(4);

                            if ( (LA3_13==52||LA3_13==55||LA3_13==59) ) {
                                alt3=2;
                            }
                            else if ( (LA3_13==37) ) {
                                alt3=3;
                            }


                            }
                            break;
                        case MULT:
                            {
                            alt3=2;
                            }
                            break;

                        }

                    }


                    }
                    break;
                case 71:
                    {
                    int LA3_3 = input.LA(2);

                    if ( (LA3_3==ID) ) {
                        int LA3_13 = input.LA(3);

                        if ( (LA3_13==52||LA3_13==55||LA3_13==59) ) {
                            alt3=2;
                        }
                        else if ( (LA3_13==37) ) {
                            alt3=3;
                        }


                    }
                    else if ( (LA3_3==MULT) ) {
                        alt3=2;
                    }


                    }
                    break;
                case 62:
                    {
                    int LA3_4 = input.LA(2);

                    if ( (LA3_4==ID) ) {
                        int LA3_13 = input.LA(3);

                        if ( (LA3_13==52||LA3_13==55||LA3_13==59) ) {
                            alt3=2;
                        }
                        else if ( (LA3_13==37) ) {
                            alt3=3;
                        }


                    }
                    else if ( (LA3_4==MULT) ) {
                        alt3=2;
                    }


                    }
                    break;
                case 68:
                    {
                    int LA3_5 = input.LA(2);

                    if ( (LA3_5==ID) ) {
                        int LA3_13 = input.LA(3);

                        if ( (LA3_13==52||LA3_13==55||LA3_13==59) ) {
                            alt3=2;
                        }
                        else if ( (LA3_13==37) ) {
                            alt3=3;
                        }


                    }
                    else if ( (LA3_5==MULT) ) {
                        alt3=2;
                    }


                    }
                    break;
                case 66:
                    {
                    int LA3_6 = input.LA(2);

                    if ( (LA3_6==ID) ) {
                        int LA3_13 = input.LA(3);

                        if ( (LA3_13==52||LA3_13==55||LA3_13==59) ) {
                            alt3=2;
                        }
                        else if ( (LA3_13==37) ) {
                            alt3=3;
                        }


                    }
                    else if ( (LA3_6==MULT) ) {
                        alt3=2;
                    }


                    }
                    break;
                case 72:
                    {
                    int LA3_7 = input.LA(2);

                    if ( (LA3_7==ID) ) {
                        int LA3_13 = input.LA(3);

                        if ( (LA3_13==52||LA3_13==55||LA3_13==59) ) {
                            alt3=2;
                        }
                        else if ( (LA3_13==37) ) {
                            alt3=3;
                        }


                    }
                    else if ( (LA3_7==MULT) ) {
                        alt3=2;
                    }


                    }
                    break;
                case 75:
                    {
                    int LA3_8 = input.LA(2);

                    if ( (LA3_8==ID) ) {
                        int LA3_13 = input.LA(3);

                        if ( (LA3_13==52||LA3_13==55||LA3_13==59) ) {
                            alt3=2;
                        }
                        else if ( (LA3_13==37) ) {
                            alt3=3;
                        }


                    }
                    else if ( (LA3_8==MULT) ) {
                        alt3=2;
                    }


                    }
                    break;
                case 83:
                    {
                    int LA3_9 = input.LA(2);

                    if ( (LA3_9==ID) ) {
                        int LA3_13 = input.LA(3);

                        if ( (LA3_13==52||LA3_13==55||LA3_13==59) ) {
                            alt3=2;
                        }
                        else if ( (LA3_13==37) ) {
                            alt3=3;
                        }


                    }
                    else if ( (LA3_9==MULT) ) {
                        alt3=2;
                    }


                    }
                    break;
                case 76:
                    {
                    int LA3_10 = input.LA(2);

                    if ( (LA3_10==ID) ) {
                        int LA3_13 = input.LA(3);

                        if ( (LA3_13==52||LA3_13==55||LA3_13==59) ) {
                            alt3=2;
                        }
                        else if ( (LA3_13==37) ) {
                            alt3=3;
                        }


                    }
                    else if ( (LA3_10==MULT) ) {
                        alt3=2;
                    }

